# sigmamodels

./: LICENCE  README.md  pyproject.toml
data/: airplane.npy  baboon.npy  cells.npy  cellsjax53.eqx  full.eqx  rgb_capped_labeled.npz  self_trained_baboon.eqx  voronoi.npz
data/sigmaflowh/: hps.json  model.eqx
data/sigmaflowv/: hps.json  model.eqx
data/uneth/: hps.json  model.eqx
data/unetv/: hps.json  model.eqx
ex1/: simplex.py
ex2/: express.py  train.py
ex3/: house.py  train.py  trainh.py  voronoi.py
legacy/: legacy.py
src/sigmaflow/: __init__.py  _handler.py  aniso.py  exp1.py  exp2.py  flow.py  layers.py  lb.py  matrices.py  metrics.py  unet.py
