[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sigmaflow"
authors = [
  { name = "Jonas Cassel", email = "jonas.cassel@math.uni-heidelberg.de" },
]
description = "Sigma flow implementation"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  'jax',
  'diffrax',
  'optax',
  'equinox',
  'numpy',
  'matplotlib',
  'scipy',
  'einops',
  'scikit-learn',
]

[project.optional-dependencies]
jax70 = [
  'jax==0.7.0',
  'jaxlib==0.7.0',
  'diffrax==0.7.0',
  'optax==0.2.5',
  'equinox==0.13.0',
  'numpy==2.3.2',
  'scipy==1.16.1',
  'einops==0.8.1',
]

[tool.ruff.lint]
ignore = ["F", "E"]
